// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Landing should change the greeting when the user is changed 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          Welcome, 
          Bruce
          !
</h2>,
        <div
          className="center-links"
>
          <div
                    className="selection"
          >
                    <a
                              href="/DataEntry"
                    >
                              Add Data
                    </a>
                    <img
                              alt="logo"
                              src="folder.svg"
                    />
          </div>
          <div
                    className="selection"
          >
                    <a
                              href="/Reports"
                    >
                              Reports
                    </a>
                    <img
                              alt="logo"
                              src="line-chart.svg"
                    />
          </div>
          <div
                    className="selection"
          >
                    <a
                              href="/ViewAll"
                    >
                              Edit Data
                    </a>
                    <img
                              alt="logo"
                              src="archive.svg"
                    />
          </div>
</div>,
      ],
      "className": "Landing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Welcome, ",
            "Bruce",
            "!",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Welcome, ",
          "Bruce",
          "!",
        ],
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="selection"
>
              <a
                            href="/DataEntry"
              >
                            Add Data
              </a>
              <img
                            alt="logo"
                            src="folder.svg"
              />
</div>,
            <div
              className="selection"
>
              <a
                            href="/Reports"
              >
                            Reports
              </a>
              <img
                            alt="logo"
                            src="line-chart.svg"
              />
</div>,
            <div
              className="selection"
>
              <a
                            href="/ViewAll"
              >
                            Edit Data
              </a>
              <img
                            alt="logo"
                            src="archive.svg"
              />
</div>,
          ],
          "className": "center-links",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  href="/DataEntry"
>
                  Add Data
</a>,
                <img
                  alt="logo"
                  src="folder.svg"
/>,
              ],
              "className": "selection",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Add Data",
                  "href": "/DataEntry",
                },
                "ref": null,
                "rendered": "Add Data",
                "type": "a",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "logo",
                  "src": "folder.svg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  href="/Reports"
>
                  Reports
</a>,
                <img
                  alt="logo"
                  src="line-chart.svg"
/>,
              ],
              "className": "selection",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Reports",
                  "href": "/Reports",
                },
                "ref": null,
                "rendered": "Reports",
                "type": "a",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "logo",
                  "src": "line-chart.svg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  href="/ViewAll"
>
                  Edit Data
</a>,
                <img
                  alt="logo"
                  src="archive.svg"
/>,
              ],
              "className": "selection",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Edit Data",
                  "href": "/ViewAll",
                },
                "ref": null,
                "rendered": "Edit Data",
                "type": "a",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "logo",
                  "src": "archive.svg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            Welcome, 
            Bruce
            !
</h2>,
          <div
            className="center-links"
>
            <div
                        className="selection"
            >
                        <a
                                    href="/DataEntry"
                        >
                                    Add Data
                        </a>
                        <img
                                    alt="logo"
                                    src="folder.svg"
                        />
            </div>
            <div
                        className="selection"
            >
                        <a
                                    href="/Reports"
                        >
                                    Reports
                        </a>
                        <img
                                    alt="logo"
                                    src="line-chart.svg"
                        />
            </div>
            <div
                        className="selection"
            >
                        <a
                                    href="/ViewAll"
                        >
                                    Edit Data
                        </a>
                        <img
                                    alt="logo"
                                    src="archive.svg"
                        />
            </div>
</div>,
        ],
        "className": "Landing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Welcome, ",
              "Bruce",
              "!",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Welcome, ",
            "Bruce",
            "!",
          ],
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="selection"
>
                <a
                                href="/DataEntry"
                >
                                Add Data
                </a>
                <img
                                alt="logo"
                                src="folder.svg"
                />
</div>,
              <div
                className="selection"
>
                <a
                                href="/Reports"
                >
                                Reports
                </a>
                <img
                                alt="logo"
                                src="line-chart.svg"
                />
</div>,
              <div
                className="selection"
>
                <a
                                href="/ViewAll"
                >
                                Edit Data
                </a>
                <img
                                alt="logo"
                                src="archive.svg"
                />
</div>,
            ],
            "className": "center-links",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="/DataEntry"
>
                    Add Data
</a>,
                  <img
                    alt="logo"
                    src="folder.svg"
/>,
                ],
                "className": "selection",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Add Data",
                    "href": "/DataEntry",
                  },
                  "ref": null,
                  "rendered": "Add Data",
                  "type": "a",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "logo",
                    "src": "folder.svg",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="/Reports"
>
                    Reports
</a>,
                  <img
                    alt="logo"
                    src="line-chart.svg"
/>,
                ],
                "className": "selection",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Reports",
                    "href": "/Reports",
                  },
                  "ref": null,
                  "rendered": "Reports",
                  "type": "a",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "logo",
                    "src": "line-chart.svg",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="/ViewAll"
>
                    Edit Data
</a>,
                  <img
                    alt="logo"
                    src="archive.svg"
/>,
                ],
                "className": "selection",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Edit Data",
                    "href": "/ViewAll",
                  },
                  "ref": null,
                  "rendered": "Edit Data",
                  "type": "a",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "logo",
                    "src": "archive.svg",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Landing should match snapshot upon load 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Landing />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <h2>
          Welcome, 
          Ulyana
          !
</h2>,
        <div
          className="center-links"
>
          <div
                    className="selection"
          >
                    <a
                              href="/DataEntry"
                    >
                              Add Data
                    </a>
                    <img
                              alt="logo"
                              src="folder.svg"
                    />
          </div>
          <div
                    className="selection"
          >
                    <a
                              href="/Reports"
                    >
                              Reports
                    </a>
                    <img
                              alt="logo"
                              src="line-chart.svg"
                    />
          </div>
          <div
                    className="selection"
          >
                    <a
                              href="/ViewAll"
                    >
                              Edit Data
                    </a>
                    <img
                              alt="logo"
                              src="archive.svg"
                    />
          </div>
</div>,
      ],
      "className": "Landing",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Welcome, ",
            "Ulyana",
            "!",
          ],
        },
        "ref": null,
        "rendered": Array [
          "Welcome, ",
          "Ulyana",
          "!",
        ],
        "type": "h2",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <div
              className="selection"
>
              <a
                            href="/DataEntry"
              >
                            Add Data
              </a>
              <img
                            alt="logo"
                            src="folder.svg"
              />
</div>,
            <div
              className="selection"
>
              <a
                            href="/Reports"
              >
                            Reports
              </a>
              <img
                            alt="logo"
                            src="line-chart.svg"
              />
</div>,
            <div
              className="selection"
>
              <a
                            href="/ViewAll"
              >
                            Edit Data
              </a>
              <img
                            alt="logo"
                            src="archive.svg"
              />
</div>,
          ],
          "className": "center-links",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  href="/DataEntry"
>
                  Add Data
</a>,
                <img
                  alt="logo"
                  src="folder.svg"
/>,
              ],
              "className": "selection",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Add Data",
                  "href": "/DataEntry",
                },
                "ref": null,
                "rendered": "Add Data",
                "type": "a",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "logo",
                  "src": "folder.svg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  href="/Reports"
>
                  Reports
</a>,
                <img
                  alt="logo"
                  src="line-chart.svg"
/>,
              ],
              "className": "selection",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Reports",
                  "href": "/Reports",
                },
                "ref": null,
                "rendered": "Reports",
                "type": "a",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "logo",
                  "src": "line-chart.svg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
            ],
            "type": "div",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <a
                  href="/ViewAll"
>
                  Edit Data
</a>,
                <img
                  alt="logo"
                  src="archive.svg"
/>,
              ],
              "className": "selection",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Edit Data",
                  "href": "/ViewAll",
                },
                "ref": null,
                "rendered": "Edit Data",
                "type": "a",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "logo",
                  "src": "archive.svg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
            ],
            "type": "div",
          },
        ],
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <h2>
            Welcome, 
            Ulyana
            !
</h2>,
          <div
            className="center-links"
>
            <div
                        className="selection"
            >
                        <a
                                    href="/DataEntry"
                        >
                                    Add Data
                        </a>
                        <img
                                    alt="logo"
                                    src="folder.svg"
                        />
            </div>
            <div
                        className="selection"
            >
                        <a
                                    href="/Reports"
                        >
                                    Reports
                        </a>
                        <img
                                    alt="logo"
                                    src="line-chart.svg"
                        />
            </div>
            <div
                        className="selection"
            >
                        <a
                                    href="/ViewAll"
                        >
                                    Edit Data
                        </a>
                        <img
                                    alt="logo"
                                    src="archive.svg"
                        />
            </div>
</div>,
        ],
        "className": "Landing",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Welcome, ",
              "Ulyana",
              "!",
            ],
          },
          "ref": null,
          "rendered": Array [
            "Welcome, ",
            "Ulyana",
            "!",
          ],
          "type": "h2",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <div
                className="selection"
>
                <a
                                href="/DataEntry"
                >
                                Add Data
                </a>
                <img
                                alt="logo"
                                src="folder.svg"
                />
</div>,
              <div
                className="selection"
>
                <a
                                href="/Reports"
                >
                                Reports
                </a>
                <img
                                alt="logo"
                                src="line-chart.svg"
                />
</div>,
              <div
                className="selection"
>
                <a
                                href="/ViewAll"
                >
                                Edit Data
                </a>
                <img
                                alt="logo"
                                src="archive.svg"
                />
</div>,
            ],
            "className": "center-links",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="/DataEntry"
>
                    Add Data
</a>,
                  <img
                    alt="logo"
                    src="folder.svg"
/>,
                ],
                "className": "selection",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Add Data",
                    "href": "/DataEntry",
                  },
                  "ref": null,
                  "rendered": "Add Data",
                  "type": "a",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "logo",
                    "src": "folder.svg",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="/Reports"
>
                    Reports
</a>,
                  <img
                    alt="logo"
                    src="line-chart.svg"
/>,
                ],
                "className": "selection",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Reports",
                    "href": "/Reports",
                  },
                  "ref": null,
                  "rendered": "Reports",
                  "type": "a",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "logo",
                    "src": "line-chart.svg",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
              ],
              "type": "div",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <a
                    href="/ViewAll"
>
                    Edit Data
</a>,
                  <img
                    alt="logo"
                    src="archive.svg"
/>,
                ],
                "className": "selection",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Edit Data",
                    "href": "/ViewAll",
                  },
                  "ref": null,
                  "rendered": "Edit Data",
                  "type": "a",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "alt": "logo",
                    "src": "archive.svg",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": "img",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
